objects/Loan_Application__c.object
<CustomObject>
    <fields>
        <fullName>App_number__c</fullName>
        <label>App number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>this is to check status</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>NOT AVAILABLE</fullName>
                </value>
                <value>
                    <fullName>LOST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <recordTypes>
        <fullName>New_users</fullName>
        <active>true</active>
        <label>New users</label>
    </recordTypes>
    <recordTypes>
        <fullName>Old_users</fullName>
        <active>true</active>
        <label>Old users</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Loan_valid_rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Loan_Amount__c)</errorConditionFormula>
        <errorDisplayField>Loan_Amount__c</errorDisplayField>
        <errorMessage>should not be blank</errorMessage>
    </validationRules>
</CustomObject>